# home-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/home_automation/app/: controller.py  main.py  settings.py  utils.py
src/home_automation/notebooks/: test.ipynb
tests/: conftest.py
tests/unit/: test_presence.py  test_utils.py
