[project]
name = "home-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "MaxWaterhout",email = "max.waterhout@hotmail.nl"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "home_automation", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
